--- a/scripts.html
+++ b/scripts.html
@@ -8,6 +8,10 @@ $(document).ready(function() {
 
 var Helper = { // General Helper object
 
+	// Constants
+
+	// Functions
+
 	parseCalendarData: function(input) {
 
 		var output = [];
