--- a/styles.html
+++ b/styles.html
@@ -123,7 +123,14 @@ body {
 
 .event-item:hover {
   box-shadow: 0 0 4px 0 rgba(0,0,0,0.4);
+}
+
+.fc-event-container:hover {
   cursor: pointer;
+}
+
+.edit {
+  display: none;
 }
 
 .panel {
@@ -165,6 +172,11 @@ a a:hover a:focus {
   color: #30a5ff;
 }
 
+@media (min-width: 1300px) {
+  .modal-lg {
+    width: 1200px;
+  }
+}
 .clear {
   clear: both;
 }
