--- a/models.html
+++ b/models.html
@@ -55,7 +55,8 @@ app.Event = Backbone.Model.extend({
     finished: false,
     notes: null,
     presenter: null,
-    status: null
+    status: null,
+    numOfPeople: 0
   },
   createCalendarEvent: function(date, startTime, endTime, opts) {
 
