--- a/index.html
+++ b/index.html
@@ -238,6 +238,16 @@
 							</div>
 						</div>
 					</div>
+          <div class='col-md-6'>
+            <div class='panel panel-info'>
+              <div class='panel-heading'>
+                Quick Actions
+              </div>
+              <div class='panel-body'>
+                <button class='btn btn-primary create-event' role='button'>Create Event</button>
+              </div>
+            </div>
+          </div>
 				</div>
 			</div>      
 
