--- a/index.html
+++ b/index.html
@@ -346,6 +346,9 @@
 	            		<div class='col-md-4'>
 	            			<p>Price: <b>$<%- event.price %></b></p>
 	            		</div>
+                  <div class='col-md-4'>
+                    <p>Number of People: <b><%- event.numOfPeople %></b></p>
+                  </div>
 	            	</div>
 	            	<div class='row event edit'>
 	            		<div class='col-md-4'>
@@ -369,6 +372,9 @@
 	            		<div class='col-md-4'>
 	            			<p>Price: <input type='number' class='price' value='<%- event.price %>'></p>
 	            		</div>
+                  <div class='col-md-4'>
+                    <p>Number of People: <input type='number' class='numOfPeople' value='<%- event.numOfPeople %>'></p>
+                  </div>
 	            	</div>
 	            	<div class='row'>
 	            		<div class='col-md-12'>
