--- a/collections.html
+++ b/collections.html
@@ -19,8 +19,8 @@ app.GroupList = Backbone.Firebase.Collection.extend({
     var id = 0;
     for (var i = 0; i < this.models.length; i++) {
 
-      if (parseInt(this.models[i].attributes.id) > id) {
-        id = this.models[i].attributes.id;
+      if (parseInt(this.models[i].attributes._id) > id) {
+        id = this.models[i].attributes._id;
       }
 
     }
@@ -57,8 +57,8 @@ app.EventList = Backbone.Firebase.Collection.extend({
   	var id = 0;
   	for (var i = 0; i < this.models.length; i++) {
 
-  		if (parseInt(this.models[i].attributes.id) > id) {
-  			id = this.models[i].attributes.id;
+  		if (parseInt(this.models[i].attributes._id) > id) {
+  			id = this.models[i].attributes._id;
   		}
 
   	}
