--- a/models.html
+++ b/models.html
@@ -6,14 +6,14 @@
 app.Group = Backbone.Model.extend({
   
   defaults: {
-    id: null,
-    groupName: null,
-    groupGroup: null,
-    groupType: null,
-    cellPhone: null,
-    workPhone: null,
-    email: null,
-    grade: null
+    id: "",
+    groupName: "",
+    groupGroup: "",
+    groupType: "",
+    cellPhone: "",
+    workPhone: "",
+    email: "",
+    grade: ""
   }
   
 });
@@ -22,40 +22,39 @@ app.Group = Backbone.Model.extend({
 app.Event = Backbone.Model.extend({
   
   defaults: {
-    id: null,
-    groupID: null,
-    show: null,
-    activity: null,
+    groupID: "",
+    show: "",
+    activity: "",
     calEvent: {
       date: {
         raw: new Date(),
-        string: null,
-        iso: null
+        string: "",
+        iso: ""
       },
       startTime: {
-        raw: null,
-        string: null
+        raw: "",
+        string: ""
       },
       endTime: {
-        raw: null,
-        string: null
+        raw: "",
+        string: ""
       },
-      calStart: null,
-      calEnd: null,
+      calStart: "",
+      calEnd: "",
       string: 'No Date Found',
-      calID: null,
-      eventID: null
+      calID: "",
+      eventID: ""
     },
-    price: null,
+    price: "",
     tour: false,
     invoiceSent: false,
     printed: false,
     checkReceived: false,
     paidStatus: false,
     finished: false,
-    notes: null,
-    presenter: null,
-    status: null,
+    notes: "",
+    presenter: "",
+    status: "",
     numOfPeople: 0
   },
   createCalendarEvent: function(date, startTime, endTime, opts) {
@@ -97,7 +96,7 @@ app.Event = Backbone.Model.extend({
     };
 
     if (!opts) {
-      object.eventID = null;
+      object.eventID = "";
     } else if (opts.keepEventId === true) {
       object.eventID = this.attributes.calEvent.eventID;
     }
@@ -112,10 +111,10 @@ app.Event = Backbone.Model.extend({
 app.MoneyModel = Backbone.Model.extend({
 
   setDates: function() {
-    if (this.attributes.datePosted !== null && this.attributes.datePosted !== null) {
+    if (this.attributes.datePosted !== "" && this.attributes.datePosted !== "") {
       this.set({datePosted: moment(this.attributes.datePosted)});
     }
-    if (this.attributes.datePaid !== null && this.attributes.datePaid !== null) {
+    if (this.attributes.datePaid !== "" && this.attributes.datePaid !== "") {
       this.set({datePaid: moment(this.attributes.datePaid)});
     }
   }
@@ -126,14 +125,14 @@ app.MoneyModel = Backbone.Model.extend({
 app.TransactionModel = app.MoneyModel.extend({
   
   defaults: {
-    id: null, // int
-    amount: null, // int
-    datePosted: null, // moment raw
-    notes: null, // string
-    paid: null, // bool
-    datePaid: null, //moment raw
-    eventID: null, // int if from event, null if not
-    groupID: null // int if from group, null if not
+    id: "", // int
+    amount: "", // int
+    datePosted: "", // moment raw
+    notes: "", // string
+    paid: "", // bool
+    datePaid: "", //moment raw
+    eventID: "", // int if from event, "" if not
+    groupID: "" // int if from group, "" if not
   }
   
 });
@@ -142,12 +141,12 @@ app.TransactionModel = app.MoneyModel.extend({
 app.PaymentModel = app.MoneyModel.extend({
   
   defaults: {
-    id: null, // int
-    transactionID: null, // int
-    amount: null, // int
-    paymentType: null, // string [from options] | need config model?
-    datePaid: null, // moment raw
-    datePosted: null //moment raw
+    id: "", // int
+    transactionID: "", // int
+    amount: "", // int
+    paymentType: "", // string [from options] | need config model?
+    datePaid: "", // moment raw
+    datePosted: "" //moment raw
   }
   
 });
