--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<link rel='stylesheet' href='https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css' />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.5.1/fullcalendar.min.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.18/c3.min.css" />
+    <link rel='stylesheet' href='https://cdn.datatables.net/buttons/1.4.2/css/buttons.dataTables.min.css' />
 		
 		<!-- Custom CSS -->
 		<?!= include('styles'); ?>
@@ -257,7 +258,7 @@
 
 			<div class='event-item'>
 				<h4><%- group.groupName %> - <%- event.calEvent.string %></h4>
-				<p>Show: <b><%- event.show %></b> <%if (event.presenter !== '') { %>| Presenter: <b><%- event.presenter %></b> <% } %> <%if (event.activity !== '' && event.activity !== null) { %> Activity: <b><%- event.activity %></b> <% } %></p>
+				<p>Show: <b><%- event.show %></b> <%if (event.presenter !== '') { %>| Presenter: <b><%- event.presenter %></b> <% } %> <%if (event.activity !== '' && event.activity !== null) { %>| Activity: <b><%- event.activity %></b> <% } %></p>
 				<p class='invoice_status'></p>
 				<p><button class='btn btn-info event-view' role='button'>View</button> <button class='btn btn-primary event-invoice' role='button'>Create Invoice</button> <button class='btn btn-warning event-payment' disabled="disabled">Add Payment</button> <button class='btn btn-success event-presented' disabled="disabled">Show Presented</button></p>
 			</div>
@@ -364,10 +365,10 @@
 	            			<p>Show: <input type='text' class='show' value='<%- event.show %>'></p>
 	            		</div>
 	            		<div class='col-md-4'>
-	            			<p>Activity: <input type='text' class='show' value='<%- event.activity %>'></p>
+	            			<p>Activity: <input type='text' class='activity' value='<%- event.activity %>'></p>
 	            		</div>
 	            		<div class='col-md-4'>
-	            			<p>Presenter: <input type='text' class='show' value='<%- event.presenter %>'></p>
+	            			<p>Presenter: <input type='text' class='presenter' value='<%- event.presenter %>'></p>
 	            		</div>
 	            		<div class='col-md-4'>
 	            			<p>Price: <input type='number' class='price' value='<%- event.price %>'></p>
@@ -381,7 +382,7 @@
 	            			<p class='invoice_status'></p>
 	            		</div>
 	            	</div>
-	            	<p><button class='btn btn-info edit-event' role='button'><em class='fa fa-pencil'>&nbsp;</em> Edit</button> <button class='btn btn-primary event-invoice' role='button'>Create Invoice</button></p>
+	            	<p><button class='btn btn-info edit-event' role='button'><em class='fa fa-pencil'>&nbsp;</em> Edit</button> <button class='btn btn-danger delete-event' role='button'><em class='fa fa-trash'>&nbsp;</em> Delete</button> <button class='btn btn-primary event-invoice' role='button'>Create Invoice</button> <button class='btn btn-warning event-payment' disabled="disabled">Add Payment</button> <button class='btn btn-success event-presented' disabled="disabled">Show Presented</button></p>
 	            </div>
 	            <div class="modal-footer">
 	              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -391,6 +392,115 @@
 	      </div>  			
 
 		</script>
+
+    <script type='text/template' id='new-event-view-template'>
+
+        <div class="modal fade" tabindex="-1" role="dialog" data-backdrop='false'>
+          <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">New Event</h4>
+              </div>
+              <div class="modal-body">
+                <div class='select-group create-event-option'>
+                  <h3>Select a Group</h3>
+                  <hr />
+                  <button class='btn btn-primary new-group-click' role='button'>Create new group</button><br /><br />
+                  <table class='select-group-table' style='width:100%'>
+                    <thead>
+                      <tr>
+                        <th>Name</th>
+                        <th>Group</th>
+                        <th>Email</th>
+                        <th>Buttons</th>
+                      </tr>
+                    </thead>
+                  </table>
+                </div>
+                <div class='new-group create-event-option'>
+                  <h3>New Group</h3>
+                  <hr />
+                  <div class='row'>
+                    <div class='col-md-4'>
+                      <p>Contact Name: <input type='text' class='groupName'></p>
+                    </div>
+                    <div class='col-md-4'>
+                      <p>Group Name: <input type='text' class='groupGroup'></p>
+                    </div>
+                    <div class='col-md-4'>
+                      <p>Group Type: <input type='text' class='groupType'></p>
+                    </div>
+                    <div class='col-md-4'>
+                      <p>Grade: <input type='text' class='grade'></p>
+                    </div>
+                    <div class='col-md-4'>
+                      <p>Email: <input type='text' class='email'></p>
+                    </div>
+                    <div class='col-md-4'>
+                      <p>Cell Phone: <input type='text' class='cellPhone'></p>
+                    </div>
+                    <div class='col-md-4'>
+                      <p>Work Phone: <input type='text' class='workPhone'></p>
+                    </div>
+                  </div>
+                  <br />
+                  <button class='btn btn-primary save-group' role='button'>Create Group</button>
+                </div>
+                <div class='select-date create-event-option'>
+                  <h3>Select a Date</h3>
+                  <hr />
+                  <h4>Contact Name: <span class='groupName'></span></h4>
+                  <hr />
+                  <div class='row'>
+                    <div class='col-md-4'>
+                      Event Date: <input type='date' class='date' />
+                    </div>
+                    <div class='col-md-4'>
+                      Start Time: <input type='time' class='startTime' />
+                    </div>
+                    <div class='col-md-4'>
+                      End Time: <input type='time' class='endTime' />
+                    </div>
+                  </div>
+                  <br />
+                  <button class='btn btn-primary select-date-click'>Next</button>
+                  <hr />
+                  <div class='calendar-status'></div>
+                  <hr />
+                  <div id='scheduling-new-event-calendar'></div>
+                </div>
+                <div class='show-details create-event-option'>
+                  <h3>Show Details</h3>
+                  <div class='row'>
+                    <div class='col-md-4'>
+                      <p>Show: <input type='text' class='show_data' value='<%- event.show %>'></p>
+                    </div>
+                    <div class='col-md-4'>
+                      <p>Activity: <input type='text' class='activity' value='<%- event.activity %>'></p>
+                    </div>
+                    <div class='col-md-4'>
+                      <p>Presenter: <input type='text' class='presenter' value='<%- event.presenter %>'></p>
+                    </div>
+                    <div class='col-md-4'>
+                      <p>Price: <input type='number' class='price' value='<%- event.price %>'></p>
+                    </div>
+                    <div class='col-md-4'>
+                      <p>Number of People: <input type='number' class='numOfPeople' value='<%- event.numOfPeople %>'></p>
+                    </div>
+                  </div>
+                  <br />
+                  <button class='btn btn-success confirm-event'><em class='fa fa-floppy-o'>&nbsp;</em> Save Event</button>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div> 
+
+    </script>
 
 		<script type='text/template' id='projects-template'>
 
@@ -486,6 +596,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.5.1/fullcalendar.min.js"></script>
 		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type='text/javascript' src='https://cdn.datatables.net/buttons/1.4.2/js/dataTables.buttons.min.js'></script>
 
 		
 		<!-- Custom Scripts -->
